# GifLib

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/gifdemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/giflib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/android/support/rastermill/: FrameSequence.java
app/src/main/java/com/example/gifdemo/: GifHandler.java  MainActivity.java
app/src/main/java/com/example/gifdemo/giflibdemo/: GifDecoder.java  GifGlideModule.java  GifResource.java  GlideExtension.java  TestActivity.java
app/src/main/java/com/ww/giflib/demo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_main1.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gifdemo/: ExampleUnitTest.java
app/src/test/java/com/example/giflib/: ExampleUnitTest.java
gif-lib/: .gitignore  build.gradle
gif-lib/src/androidTest/java/com/ww/giflib/: ExampleInstrumentedTest.kt
gif-lib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gif-lib/src/main/java/android/support/rastermill/: FrameSequence.java  FrameSequenceDrawable.java
gif-lib/src/main/java/com/ww/giflib/: GifDecoder.kt  GifExtension.kt  GifGlideModule.kt  GifResource.kt
gif-lib/src/test/java/com/ww/giflib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
